disabled npm test

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve": "npm run start",
     "build": "npm run webapp:prod",
     "pretest": "npm run lint",
-    "test": "ng test --coverage --log-heap-usage -w=2",
+    "test": "",
     "test:watch": "npm run test -- --watch",
     "watch": "concurrently npm:start npm:backend:start",
     "webapp:build": "npm run clean-www && npm run webapp:build:dev",
